--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         - content="0.5; url=https://slowlow999.github.io/test/"
           - "0.5" means the redirect happens after 0.5 seconds.
           - "url=" specifies the destination URL.
-          - Replaced "https://www.example.com" with the new URL for redirection.
+          - The URL has been updated to https://slowlow999.github.io/test/ for redirection.
     -->
     <meta http-equiv="refresh" content="0.5; url=https://slowlow999.github.io/test/">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔗</text></svg>">
