--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         const otherLoopPageUrl = 'https://slowlow999.github.io/test/'; // <--- THIS IS THE KEY CHANGE for the 'tigger' page
 
         // The final destination URL after the loop is broken.
-        const finalDestinationUrl = 'https://www.google.com'; // <--- CHANGE THIS to your desired final website (should match 'test' page)
+        const finalDestinationUrl = 'https://slowlow999.github.io/WRITE-HELLO-TO-PROCEED/'; // <--- CHANGE THIS to your desired final website (should match 'test' page)
 
         // The maximum number of redirects within the loop before breaking.
         // A value of 4 means 2 full round trips (e.g., test -> tigger -> test -> tigger -> test)
