--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
     <div class="container">
         <h1>WRITE HELLO IN THE TEXT BOX</h1> <!-- Text as requested by the user -->
-        <p>Attempting to resolve redirection loop...</p>
+        <p>this is my next user request. think of it</p>  
     </div>
 
     <script>
